--- a/index1.html
+++ b/index1.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Rating Component</title>
 </head>
 <body>
-    <h1>Mini Exercise</h1>
+    <div class="container">
+        <div class="card bg-light border-0 shadow-lg rounded-4 mt-5">
+            <div class="card-body">
+                <!-- Top Row -->
+                 <div class="row p-5">
+                    <div class="col-7">
+                        <h2 class="fw-bolded">What others think about the product</h2>
+                    </div>
+                    <div class="col-5">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>4.8</h3>
+                                <p>Average Rating</p>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </div>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
