--- a/index1.html
+++ b/index1.html
@@ -19,8 +19,8 @@
                     <div class="col-5">
                         <div class="card">
                             <div class="card-body">
-                                <h3>4.8</h3>
-                                <p>Average Rating</p>
+                                <h3 class="display-5 fw-semibold"><i class="fa-solid fa-star text-warning"></i> 4.8</h3>
+                                <p class="text-center">Average Rating</p>
                             </div>
                         </div>
                     </div>
