--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Rating Component</title>
 </head>
+
 <body>
     <div class="container">
         <div class="card bg-light border-0 shadow-lg rounded-4 mt-5">
             <div class="card-body">
                 <!-- Top Row -->
-                 <div class="row p-5">
+                <div class="row p-5">
                     <div class="col-7">
                         <h2 class="fw-bolded">What others think about the product</h2>
                     </div>
@@ -25,9 +29,9 @@
                             </div>
                         </div>
                     </div>
-                 </div>
-                 <!-- Search -->
-                 <div class="row">
+                </div>
+                <!-- Search -->
+                <div class="row">
                     <div class="col-12">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text rounded-start-5">
@@ -36,10 +40,12 @@
                             <input type="text" class="form-control rounded-end-5" placeholder="Search Reviews">
                         </div>
                     </div>
-                 </div>
+                </div>
+
             </div>
         </div>
     </div>
-<script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
